@@ -4,7 +4,7 @@ import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.protobuf.ByteString;
 
-import emu.grasscutter.GameConstants;
+import emu.grasscutter.Config;
 import emu.grasscutter.Grasscutter;
 import emu.grasscutter.Grasscutter.ServerDebugMode;
 import emu.grasscutter.Grasscutter.ServerRunMode;
@@ -33,11 +33,9 @@ import org.eclipse.jetty.util.ssl.SslContextFactory;
 
 import java.io.*;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import java.util.*;
 
 import static emu.grasscutter.utils.Language.translate;
-import static emu.grasscutter.Configuration.*;
 
 public final class DispatchServer {
 	public static String query_region_list = "";
@@ -66,7 +64,7 @@ public final class DispatchServer {
 	public void setHttpServer(Express httpServer) {
 		this.httpServer.stop();
 		this.httpServer = httpServer;
-		this.httpServer.listen(DISPATCH_INFO.bindPort);
+		this.httpServer.listen(Grasscutter.getConfig().getDispatchOptions().Port);
 	}
 
 	public Gson getGsonFactory() {
@@ -75,7 +73,7 @@ public final class DispatchServer {
 
 	public QueryCurrRegionHttpRsp getCurrRegion() {
 		// Needs to be fixed by having the game servers connect to the dispatch server.
-		if (SERVER.runMode == ServerRunMode.HYBRID) {
+		if (Grasscutter.getConfig().RunMode == ServerRunMode.HYBRID) {
 			return regions.get(defaultServerName).parsedRegionQuery;
 		}
 
@@ -86,14 +84,14 @@ public final class DispatchServer {
 	public void loadQueries() {
 		File file;
 
-		file = new File(DATA("query_region_list.txt"));
+		file = new File(Grasscutter.getConfig().DATA_FOLDER + "query_region_list.txt");
 		if (file.exists()) {
 			query_region_list = new String(FileUtils.read(file));
 		} else {
 			Grasscutter.getLogger().warn("[Dispatch] query_region_list not found! Using default region list.");
 		}
 
-		file = new File(DATA("query_cur_region.txt"));
+		file = new File(Grasscutter.getConfig().DATA_FOLDER + "query_cur_region.txt");
 		if (file.exists()) {
 			query_cur_region = new String(FileUtils.read(file));
 		} else {
@@ -110,37 +108,52 @@ public final class DispatchServer {
 			QueryCurrRegionHttpRsp regionQuery = QueryCurrRegionHttpRsp.parseFrom(decoded2);
 
 			List<RegionSimpleInfo> servers = new ArrayList<>();
-			List<String> usedNames = new ArrayList<>(); // List to check for potential naming conflicts.
-			if (SERVER.runMode == ServerRunMode.HYBRID) { // Automatically add the game server if in hybrid mode.
+			List<String> usedNames = new ArrayList<>(); // List to check for potential naming conflicts
+			if (Grasscutter.getConfig().RunMode == ServerRunMode.HYBRID) { // Automatically add the game server if in
+																				// hybrid mode
 				RegionSimpleInfo server = RegionSimpleInfo.newBuilder()
 						.setName("os_usa")
-						.setTitle(DISPATCH_INFO.defaultName)
+						.setTitle(Grasscutter.getConfig().getGameServerOptions().Name)
 						.setType("DEV_PUBLIC")
 						.setDispatchUrl(
-								"http" + (DISPATCH_ENCRYPTION.useEncryption ? "s" : "") + "://"
-										+ lr(DISPATCH_INFO.accessAddress, DISPATCH_INFO.bindAddress) + ":"
-										+ lr(DISPATCH_INFO.accessPort, DISPATCH_INFO.bindPort)
+								"http" + (Grasscutter.getConfig().getDispatchOptions().FrontHTTPS ? "s" : "") + "://"
+										+ (Grasscutter.getConfig().getDispatchOptions().PublicIp.isEmpty()
+												? Grasscutter.getConfig().getDispatchOptions().Ip
+												: Grasscutter.getConfig().getDispatchOptions().PublicIp)
+										+ ":"
+										+ (Grasscutter.getConfig().getDispatchOptions().PublicPort != 0
+												? Grasscutter.getConfig().getDispatchOptions().PublicPort
+												: Grasscutter.getConfig().getDispatchOptions().Port)
 										+ "/query_cur_region/" + defaultServerName)
 						.build();
 				usedNames.add(defaultServerName);
 				servers.add(server);
 
 				RegionInfo serverRegion = regionQuery.getRegionInfo().toBuilder()
-						.setGateserverIp(lr(GAME_INFO.accessAddress, GAME_INFO.bindAddress))
-						.setGateserverPort(lr(GAME_INFO.accessPort, GAME_INFO.bindPort))
-						.setSecretKey(ByteString.copyFrom(FileUtils.read(KEYS_FOLDER + "/dispatchSeed.bin")))
+						.setGateserverIp((Grasscutter.getConfig().getGameServerOptions().PublicIp.isEmpty()
+								? Grasscutter.getConfig().getGameServerOptions().Ip
+								: Grasscutter.getConfig().getGameServerOptions().PublicIp))
+						.setGateserverPort(Grasscutter.getConfig().getGameServerOptions().PublicPort != 0
+								? Grasscutter.getConfig().getGameServerOptions().PublicPort
+								: Grasscutter.getConfig().getGameServerOptions().Port)
+						.setSecretKey(ByteString
+								.copyFrom(FileUtils.read(Grasscutter.getConfig().KEY_FOLDER + "dispatchSeed.bin")))
 						.build();
 
 				QueryCurrRegionHttpRsp parsedRegionQuery = regionQuery.toBuilder().setRegionInfo(serverRegion).build();
 				regions.put(defaultServerName, new RegionData(parsedRegionQuery,
 						Base64.getEncoder().encodeToString(parsedRegionQuery.toByteString().toByteArray())));
 
-			} else if (DISPATCH_INFO.regions.length == 0) {
-				Grasscutter.getLogger().error("[Dispatch] There are no game servers available. Exiting due to unplayable state.");
-				System.exit(1);
+			} else {
+				if (Grasscutter.getConfig().getDispatchOptions().getGameServers().length == 0) {
+					Grasscutter.getLogger()
+							.error("[Dispatch] There are no game servers available. Exiting due to unplayable state.");
+					System.exit(1);
+				}
 			}
 
-			for (var regionInfo : DISPATCH_INFO.regions) {
+			for (Config.DispatchServerOptions.RegionInfo regionInfo : Grasscutter.getConfig().getDispatchOptions()
+					.getGameServers()) {
 				if (usedNames.contains(regionInfo.Name)) {
 					Grasscutter.getLogger().error("Region name already in use.");
 					continue;
@@ -150,10 +163,13 @@ public final class DispatchServer {
 						.setTitle(regionInfo.Title)
 						.setType("DEV_PUBLIC")
 						.setDispatchUrl(
-								"http" + (DISPATCH_ENCRYPTION.useEncryption ? "s" : "") + "://"
-										+ lr(DISPATCH_INFO.accessAddress, DISPATCH_INFO.bindAddress) + ":" 
-										+ lr(DISPATCH_INFO.accessPort, DISPATCH_INFO.bindPort) 
-										+ "/query_cur_region/" + regionInfo.Name)
+								"http" + (Grasscutter.getConfig().getDispatchOptions().FrontHTTPS ? "s" : "") + "://"
+										+ (Grasscutter.getConfig().getDispatchOptions().PublicIp.isEmpty()
+												? Grasscutter.getConfig().getDispatchOptions().Ip
+												: Grasscutter.getConfig().getDispatchOptions().PublicIp)
+										+ ":" + (Grasscutter.getConfig().getDispatchOptions().PublicPort != 0
+										? Grasscutter.getConfig().getDispatchOptions().PublicPort
+										: Grasscutter.getConfig().getDispatchOptions().Port) + "/query_cur_region/" + regionInfo.Name)
 						.build();
 				usedNames.add(regionInfo.Name);
 				servers.add(server);
@@ -162,7 +178,7 @@ public final class DispatchServer {
 						.setGateserverIp(regionInfo.Ip)
 						.setGateserverPort(regionInfo.Port)
 						.setSecretKey(ByteString
-								.copyFrom(FileUtils.read(KEYS_FOLDER + "/dispatchSeed.bin")))
+								.copyFrom(FileUtils.read(Grasscutter.getConfig().KEY_FOLDER + "dispatchSeed.bin")))
 						.build();
 
 				QueryCurrRegionHttpRsp parsedRegionQuery = regionQuery.toBuilder().setRegionInfo(serverRegion).build();
@@ -178,8 +194,8 @@ public final class DispatchServer {
 					.build();
 
 			this.regionListBase64 = Base64.getEncoder().encodeToString(regionList.toByteString().toByteArray());
-		} catch (Exception exception) {
-			Grasscutter.getLogger().error("[Dispatch] Error while initializing region info!", exception);
+		} catch (Exception e) {
+			Grasscutter.getLogger().error("[Dispatch] Error while initializing region info!", e);
 		}
 	}
 
@@ -189,14 +205,14 @@ public final class DispatchServer {
 				Server server = new Server();
 				ServerConnector serverConnector;
 
-				if(DISPATCH_ENCRYPTION.useEncryption) {
+				if(Grasscutter.getConfig().getDispatchOptions().UseSSL) {
 					SslContextFactory.Server sslContextFactory = new SslContextFactory.Server();
-					File keystoreFile = new File(DISPATCH_ENCRYPTION.keystore);
+					File keystoreFile = new File(Grasscutter.getConfig().getDispatchOptions().KeystorePath);
 
 					if(keystoreFile.exists()) {
 						try {
 							sslContextFactory.setKeyStorePath(keystoreFile.getPath());
-							sslContextFactory.setKeyStorePassword(DISPATCH_ENCRYPTION.keystorePassword);
+							sslContextFactory.setKeyStorePassword(Grasscutter.getConfig().getDispatchOptions().KeystorePassword);
 						} catch (Exception e) {
 							e.printStackTrace();
 							Grasscutter.getLogger().warn(translate("messages.dispatch.keystore.password_error"));
@@ -214,7 +230,7 @@ public final class DispatchServer {
 						serverConnector = new ServerConnector(server, sslContextFactory);
 					} else {
 						Grasscutter.getLogger().warn(translate("messages.dispatch.keystore.no_keystore_error"));
-						DISPATCH_ENCRYPTION.useEncryption = false;
+						Grasscutter.getConfig().getDispatchOptions().UseSSL = false;
 
 						serverConnector = new ServerConnector(server);
 					}
@@ -222,31 +238,28 @@ public final class DispatchServer {
 					serverConnector = new ServerConnector(server);
 				}
 
-				serverConnector.setPort(DISPATCH_INFO.bindPort);
+				serverConnector.setPort(Grasscutter.getConfig().getDispatchOptions().Port);
 				server.setConnectors(new Connector[]{serverConnector});
 				return server;
 			});
 
-			config.enforceSsl = DISPATCH_ENCRYPTION.useEncryption;
-			if(SERVER.debugLevel == ServerDebugMode.ALL) {
+			config.enforceSsl = Grasscutter.getConfig().getDispatchOptions().UseSSL;
+			if(Grasscutter.getConfig().DebugMode == ServerDebugMode.ALL) {
 				config.enableDevLogging();
 			}
-			
-			if (DISPATCH_POLICIES.cors.enabled) {
-				var corsPolicy = DISPATCH_POLICIES.cors;
-				if (corsPolicy.allowedOrigins.length > 0) 
-					config.enableCorsForOrigin(corsPolicy.allowedOrigins);
+			if (Grasscutter.getConfig().getDispatchOptions().CORS){
+				if (Grasscutter.getConfig().getDispatchOptions().CORSAllowedOrigins.length > 0) config.enableCorsForOrigin(Grasscutter.getConfig().getDispatchOptions().CORSAllowedOrigins);
 				else config.enableCorsForAllOrigins();
 			}
 		});
-		httpServer.get("/", (req, res) -> res.send("<!doctype html><html><head><meta charset=\"utf8\"></head><body>" + translate("messages.status.welcome") + "</body></html>"));
+		httpServer.get("/", (req, res) -> res.send(translate("messages.status.welcome")));
 
 		httpServer.raw().error(404, ctx -> {
-			if(SERVER.debugLevel == ServerDebugMode.MISSING) {
+			if(Grasscutter.getConfig().DebugMode == ServerDebugMode.MISSING) {
 				Grasscutter.getLogger().info(translate("messages.dispatch.unhandled_request_error", ctx.method(), ctx.url()));
 			}
 			ctx.contentType("text/html");
-			ctx.result("<!doctype html><html><head><meta charset=\"utf8\"></head><body><img src=\"https://http.cat/404\" /></body></html>"); // I'm like 70% sure this won't break anything.
+			ctx.result("<!doctype html><html lang=\"en\"><body><img src=\"https://http.cat/404\" /></body></html>"); // I'm like 70% sure this won't break anything.
 		});
 
 		// Authentication Handler
@@ -258,15 +271,6 @@ public final class DispatchServer {
 		httpServer.post("/authentication/login", (req, res) -> this.getAuthHandler().handleLogin(req, res));
 		httpServer.post("/authentication/register", (req, res) -> this.getAuthHandler().handleRegister(req, res));
 		httpServer.post("/authentication/change_password", (req, res) -> this.getAuthHandler().handleChangePassword(req, res));
-
-		// Server Status
-		httpServer.get("/status/server", (req, res) -> {
-
-			int playerCount = Grasscutter.getGameServer().getPlayers().size();
-			String version = GameConstants.VERSION;
-
-			res.send("{\"retcode\":0,\"status\":{\"playerCount\":" + playerCount + ",\"version\":\"" + version + "\"}}");
-		});
 
 		// Dispatch
 		httpServer.get("/query_region_list", (req, res) -> {
@@ -446,7 +450,7 @@ public final class DispatchServer {
 		httpServer.get("/admin/mi18n/plat_oversea/m202003048/m202003048-version.json", new DispatchHttpJsonHandler("{\"version\":51}"));
 
 		// gacha record.
-		String gachaMappingsPath = Utils.toFilePath(DATA("/gacha_mappings.js"));
+		String gachaMappingsPath = Utils.toFilePath(Grasscutter.getConfig().DATA_FOLDER + "/gacha_mappings.js");
 		// TODO: Only serve the html page and have a subsequent request to fetch the gacha data.
 		httpServer.get("/gacha", new GachaRecordHandler());
 		if(!(new File(gachaMappingsPath).exists())) {
@@ -458,7 +462,7 @@ public final class DispatchServer {
 		// static file support for plugins
 		httpServer.raw().config.precompressStaticFiles = false; // If this isn't set to false, files such as images may appear corrupted when serving static files
 
-		httpServer.listen(DISPATCH_INFO.bindPort);
+		httpServer.listen(Grasscutter.getConfig().getDispatchOptions().Port);
 		Grasscutter.getLogger().info(translate("messages.dispatch.port_bind", Integer.toString(httpServer.raw().port())));
 	}
 
@@ -477,11 +481,15 @@ public final class DispatchServer {
 
 			if (next > last) {
 				int eqPos = qs.indexOf('=', last);
-				if (eqPos < 0 || eqPos > next) {
-					result.put(URLDecoder.decode(qs.substring(last, next), StandardCharsets.UTF_8), "");
-				} else {
-					result.put(URLDecoder.decode(qs.substring(last, eqPos), StandardCharsets.UTF_8),
-							URLDecoder.decode(qs.substring(eqPos + 1, next), StandardCharsets.UTF_8));
+				try {
+					if (eqPos < 0 || eqPos > next) {
+						result.put(URLDecoder.decode(qs.substring(last, next), "utf-8"), "");
+					} else {
+						result.put(URLDecoder.decode(qs.substring(last, eqPos), "utf-8"),
+								URLDecoder.decode(qs.substring(eqPos + 1, next), "utf-8"));
+					}
+				} catch (UnsupportedEncodingException e) {
+					throw new RuntimeException(e); // will never happen, utf-8 support is mandatory for java
 				}
 			}
 			last = next + 1;
